adicionado questao no html

--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
 
+<!-- Faça uma página em HTML que receba o número de integrantes de uma equipe e o nome do líder da equipe.
+Envie pelo método post ou get este valor para um programa PHP que apresentará (utilizando o comando
+switch):
+0 : não forma equipe
+1: não forma equipe
+2, 3 ou 4: equipe formada com sucesso
+demais valores: inválidos
+Se formar a equipe, apresente o nome do líder. -->
+
 <head>
     <title>Formulário de Equipe</title>
 </head>
